--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="product-info">
                         <h2>Кредитная карта</h2>
                         <p>Снятие наличных без комиссии</p>
-                        <a href="https://trnsfx.ru/go/sqyxd2lm0j" class="apply-btn" data-product="2">Оформить</a>
+                        <a href="https://trnsfx.ru/go/s9vu4qnk9g" class="apply-btn" data-product="2">Оформить</a>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                     <div class="product-info">
                         <h2>Кредит наличными</h2>
                         <p>До 90 дней без первого платежа</p>
-                        <a href="https://trnsfx.ru/go/s6hyl2g8la" class="apply-btn" data-product="4">Оформить</a>
+                        <a href="https://trnsfx.ru/go/sajc11nfi6" class="apply-btn" data-product="4">Оформить</a>
                     </div>
                 </div>
             </div>
