--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="product-info">
                         <h2>Дебетовая карта</h2>
                         <p>Кэшбек до 3000₽ в месяц</p>
-                        <a href="https://trnsfx.ru/go/sxy78fcmrg" class="apply-btn" data-product="1">Оформить</a>
+                        <a href="https://vldmnt.ru/go/s2swbbyrq5" class="apply-btn" data-product="1">Оформить</a>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     <div class="product-info">
                         <h2>Кредитная карта</h2>
                         <p>Снятие наличных без комиссии</p>
-                        <a href="https://trnsfx.ru/go/s9vu4qnk9g" class="apply-btn" data-product="2">Оформить</a>
+                        <a href="https://trnsfx.ru/go/sqlj9mg8tc" class="apply-btn" data-product="2">Оформить</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
                     <div class="product-info">
                         <h2>Займ на карту</h2>
                         <p>Под выгодный процент</p>
-                        <a href="https://trnsfx.ru/go/snggyf0n7o" class="apply-btn" data-product="3">Оформить</a>
+                        <a href="https://trnsfx.ru/go/s7hm7flrrr" class="apply-btn" data-product="3">Оформить</a>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                     <div class="product-info">
                         <h2>Кредит наличными</h2>
                         <p>До 90 дней без первого платежа</p>
-                        <a href="https://trnsfx.ru/go/sajc11nfi6" class="apply-btn" data-product="4">Оформить</a>
+                        <a href="https://trnsfx.ru/go/swejgb27x2" class="apply-btn" data-product="4">Оформить</a>
                     </div>
                 </div>
             </div>
